--- a/MSR.SuDoKu.GridTests/MSR.SuDoKu.GridTests.csproj
+++ b/MSR.SuDoKu.GridTests/MSR.SuDoKu.GridTests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6B231B20-030E-4AAB-B2F7-A7732940D05C}</ProjectGuid>
+    <ProjectGuid>{1A377994-B352-4AC4-8669-405A291DDD07}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MSR.Components.GridTests</RootNamespace>
-    <AssemblyName>MSR.Components.GridTests</AssemblyName>
+    <RootNamespace>MSR.SuDoKu.GridTests</RootNamespace>
+    <AssemblyName>MSR.SuDoKu.GridTests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -58,12 +58,12 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="Grid\GridTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SuDoKuGridTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MSR.Components.Grid\MSR.Components.Grid.csproj">
-      <Project>{DA162BC9-9DBF-4056-AD63-DB4A2F940F76}</Project>
+      <Project>{da162bc9-9dbf-4056-ad63-db4a2f940f76}</Project>
       <Name>MSR.Components.Grid</Name>
     </ProjectReference>
     <ProjectReference Include="..\MSR.SuDoKu.Grid\MSR.SuDoKu.Grid.csproj">
