--- a/MSR.SuDoKu.Interfaces/MSR.SuDoKu.Interfaces.csproj
+++ b/MSR.SuDoKu.Interfaces/MSR.SuDoKu.Interfaces.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BB6E121E-0D36-4ECB-8730-C4CD97A012F5}</ProjectGuid>
+    <ProjectGuid>{A8AADC02-5DC0-4239-AB16-70CEE0F3BA60}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MSR.SuDoKu.Grid</RootNamespace>
-    <AssemblyName>MSR.SuDoKu.Grid</AssemblyName>
+    <RootNamespace>MSR.SuDoKu.Interfaces</RootNamespace>
+    <AssemblyName>MSR.SuDoKu.Interfaces</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,22 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Grid\ICell.cs" />
+    <Compile Include="Grid\IGrid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SuDoKuGrid.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MSR.Component.Validators\MSR.Component.Validators.csproj">
-      <Project>{305592EB-E3AB-4822-BB8D-84CFB0D27BC8}</Project>
-      <Name>MSR.Component.Validators</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MSR.Components.Grid\MSR.Components.Grid.csproj">
-      <Project>{da162bc9-9dbf-4056-ad63-db4a2f940f76}</Project>
-      <Name>MSR.Components.Grid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MSR.SuDoKu.Interfaces\MSR.SuDoKu.Interfaces.csproj">
-      <Project>{A8AADC02-5DC0-4239-AB16-70CEE0F3BA60}</Project>
-      <Name>MSR.SuDoKu.Interfaces</Name>
-    </ProjectReference>
+    <Compile Include="Validators\IValidationResult.cs" />
+    <Compile Include="Validators\IValidator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
