--- a/MSR.SuDoKu.Interfaces/MSR.SuDoKu.Interfaces.csproj
+++ b/MSR.SuDoKu.Interfaces/MSR.SuDoKu.Interfaces.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="Grid\ICell.cs" />
     <Compile Include="Grid\IGrid.cs" />
+    <Compile Include="Grid\IPoint.cs" />
+    <Compile Include="Grid\ISuDoKuGrid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validators\IValidationResult.cs" />
     <Compile Include="Validators\IValidator.cs" />
